fixed contact logo alignment on contact page

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -69,6 +69,7 @@ footer {
     }
     input {
         padding: 12px;
+        border: none;
         &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
             font-family: $bodyFont;
             font-size: .8rem;
