--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -3,7 +3,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 50vh;
+    height: 65vh;
     max-width: 1600px;
     margin: 0 auto;
     position:relative;
