--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -2,7 +2,9 @@
 
 @media(min-width: 750px){
     //HOME PAGE START
-
+    header{
+        background-size: cover;
+    }
     .productDetails{
         background-position: 65% 5%;
     }
@@ -16,18 +18,22 @@
         margin: 0 auto;
     }
 
-    footer .wrapper{
+    footer{
+        padding-top: 75px;
+        .wrapper{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         gap: 15px;
     }
+}
 
     //BLOG PAGE START
     .blogHeader{
         background-size: contain;
         background-position: 50% 50%;
         height: 500px;
+        max-height: 580px;
     }
     .relatedImgGallery {
         display: flex;
@@ -64,30 +70,39 @@
     
     }
 
+    nav {
+        max-width: 1400px;
+        margin: 0 auto;
+        padding-top: 20px;
+        
+    }
 
     .burgerMenu{
         display: none;
     } 
+
     .leftNav,
     .rightNav
     {
         display:flex;
         flex-direction: row;
         justify-content: space-between;
+        padding:  0 115px 0 115px;
         margin: 0 20px 0 20px;
         li {
-            margin: 10px 5px 0px 10px;
+            margin: 0px 5px 0px 10px;
         }
+        
     }
     .logoContainer{
         margin: 0 auto;
-        width: 150px;
     }
 
     .leftNav {
         order: -1;
         li{
             list-style: none;
+            padding-top: 5px;
         }
     }
 
@@ -96,7 +111,8 @@
             font-size: 1.3rem;
         }
         li{
-            display: inline-block;
+            display: inline;
+
         }
     
         .fa-bag-shopping{
@@ -232,6 +248,7 @@
             width: auto;
             max-height: 600px;
         }
+
         .contactTextContainer {
             width: 100vw;
             h2{
@@ -241,6 +258,7 @@
                 padding: 0 175px 0 175px;
             }
         }
+        
         .contactImgContainer {
             display: flex;
             align-items: center;
@@ -257,6 +275,17 @@
             height: 600px;
         }
 
+    }
+
+    .contactDetails {
+        .wrapper {
+            max-width: 1000px;
+            .textContainer {
+                text-align: left;
+                margin: 0;
+                margin-bottom: 50px;
+            }
+        }
     }
 //contact section end
 
@@ -294,8 +323,8 @@
 
     //BLOG PAGE START
     .blogHeader{
-        background-size: cover;
-        height: 65vh;
+        background-size: contain;
+        height: 600px;
         max-width: 1400px;
         margin-bottom: 100px;
     }
@@ -421,7 +450,10 @@
             }
         }
     }
-
+    
+    .blogMain {
+        margin-top: -75px;
+    }
 
     .contactDetails{
         .textContainer {
@@ -443,7 +475,7 @@
         .indContainer {
             text-align: left;
             i {
-                font-size: 1.5rem;
+                font-size: 2rem;
             }
         }
     }
