--- a/styles/partials/_navBar.scss
+++ b/styles/partials/_navBar.scss
@@ -15,10 +15,12 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 10px;
+    align-items: center;
+    position: relative;
     .logoContainer{
         order: -1;
         padding: 5px;
+        
     }
     li a {
         color: black;
